Name:                   css-grammar
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Grammar for Css3
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
                        Language.Css.Colors
                        Language.Css.Namespaces
                        Language.Css.Properties
  Exposed-Modules:      Language.Css.Selectors
                        Language.Css.Values
                        Language.Css.Values.Lengths
                        Language.Css.Values.Other
                        Language.Css.Values.Urls
  Build-Depends:        base >= 4.6 && < 5
                      , uri

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , quickcheck-instances

Source-Repository head
  Type:                 git
  Location:             git://github.com/athanclark/css-grammar.git
